# myrm-agent-harness

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  FRAMEWORK_DESIGN_PRINCIPLES.md  LICENSE  README.md  _ARCH.md  embeddings.db  pyproject.toml
.github/: core-platform-matrix.json
.github/workflows/: arm64-build.yml  boundary-check.yml  build-core-wheels.yml  build-official-runtime.yml  performance.yml  publish-pypi.yml  security.yml  test.yml  tool-registry-check.yml
.pypi-bootstrap/core-wheel-darwin-arm64/: myrm_agent_harness_core_darwin_arm64-0.1.0rc1-py3-none-any.whl
.pypi-bootstrap/core-wheel-darwin-x64/: myrm_agent_harness_core_darwin_x64-0.1.0rc1-py3-none-any.whl
.pypi-bootstrap/core-wheel-linux-arm64/: myrm_agent_harness_core_linux_arm64-0.1.0rc1-py3-none-any.whl
.pypi-bootstrap/core-wheel-linux-x64/: myrm_agent_harness_core_linux_x64-0.1.0rc1-py3-none-any.whl
.pypi-bootstrap/core-wheel-win32-arm64/: myrm_agent_harness_core_win32_arm64-0.1.0rc1-py3-none-any.whl
.pypi-bootstrap/core-wheel-win32-x64/: myrm_agent_harness_core_win32_x64-0.1.0rc1-py3-none-any.whl
benchmarks/: _ARCH.md  baseline_boundary.json  bench_adaptive_router.py  bench_batch_performance.py  bench_boundary_detection.py  bench_compression_levels.py  bench_critical_fixes.py  bench_embedding_cache_real.py  bench_embedding_cache_synthetic.py  bench_incremental_monitor.py  bench_p0_optimizations.py  bench_startup_performance.py  context_archive_benchmark.py  skill_search_analyze_failures.py  skill_search_evaluate_ablation.py  skill_search_evaluate_baselines.py  skill_search_evaluate_comprehensive.py  skill_search_evaluate_hybrid.py  skill_search_evaluate_quality.py
benchmarks/archive/: _ARCH.md  bench_compression_realistic.py  bench_deduplication.py  bench_p0_p1_optimizations.py  bench_p1_optimizations.py  scan_cache_benchmark.py  skill_search_analyze_failure_improvement.py  skill_search_evaluate_multilingual_format.py  skill_search_evaluate_query_expansion.py
harness_packaging/: DISTRIBUTION_SYSTEM.md  PUBLIC_WHEELS_REPO.md  _ARCH.md  __init__.py  assemble.py  codegen.py  compiled_core_extra.py  core_manifest.yaml  integrity.py  manifest.py  nuitka_compile.py  platforms.py  pypi_index.py  release.py  runtime_platform.py  version.py
scripts/: README.md  _ARCH.md  assemble_production.py  bootstrap_pypi_core_upload.sh  boundary_check.py  boundary_config.py  boundary_engine.py  build_core.py  build_release_wheel.py  check_file_line_limit.py  check_fractal_docs.py  detect_blocking_io.py  file_line_baseline.txt  fractal_header_baseline.txt  generate_release_manifest.py  measure_test_memory.py  measure_turn1_token_inventory.py  publish_pypi_rc1.py  sync_distribution_metadata.py  tool_registry_config.py  tool_registry_engine.py  tool_registry_models.py  validate_arch_inventory.py  validate_pypi_wheels.py  validate_tool_registry.py  verify_pypi_publish.py  verify_release_tag.py
src/myrm_agent_harness/: _ARCH.md  __init__.py  _core_ip_manifest.py  _distribution.py  _runtime_platform.py  _verify_distribution.py  client.py
tests/: _ARCH.md  conftest.py  test_dual_engine_eviction.py  test_kanban_dependency.py  test_readme_claims.py
tests/agent/: test_agent_factory_and_model_resolver.py  test_agent_helpers.py  test_agent_runtime_spec.py  test_base_agent_command_resume.py  test_base_agent_concurrency.py  test_base_agent_extensions.py  test_base_agent_subagent_methods.py  test_base_agent_tools_cache_tiering.py  test_base_agent_wakeup.py  test_checklist_conditional_loading.py  test_compression_exhausted.py  test_contextvar_cleanup.py  test_delegate_batch_tournament.py  test_delegate_task_tool.py  test_delegate_task_tool_verification.py  test_event_handlers_image.py  test_event_handlers_interrupt.py  test_execution_checklist_events.py  test_execution_checklist_state.py  test_execution_checklist_tool.py  test_explicit_skill_injection.py  test_idle_tasks.py  test_inline_artifact_events.py  test_langgraph_tool_args_guard.py  test_llm_map_withdrawal.py  test_memory_extraction.py  test_planner_conditional_loading.py  test_red_green_tde.py  test_retry_after_extract.py  test_run_lifecycle.py  test_skill_agent_optimizations.py  test_skill_agent_review.py  test_skill_agent_unattended_mode.py  test_skill_agent_wiki.py  test_skill_filtering.py  test_skill_hot_reload_e2e.py  test_subagent_catalog.py  test_subagent_config_policies.py  test_subagent_manager.py  test_subagent_notification_cache.py  (+5 more)
tests/api/: test_factory_contract.py  test_integration_surface.py  test_public_surface.py
tests/architecture/: _ARCH.md  distribution_wheel_helpers.py  test_arch_no_placeholder.py  test_artifact_vault_path_boundary.py  test_backends_agent_boundary.py  test_bash_code_execute_tool_reexport.py  test_bash_executor_reexport.py  test_bash_tool_reexport.py  test_boundary_autofix.py  test_boundary_config.py  test_check_fractal_docs.py  test_compiled_core_extra.py  test_core_dependencies.py  test_distribution_codegen.py  test_distribution_manifest_gate.py  test_distribution_packaging.py  test_distribution_wheel_artifact.py  test_event_bus_naming_boundary.py  test_executor_reexport.py  test_file_line_limit.py  test_harness_boundary.py  test_manager_shared_barrel.py  test_mixin_mro.py  test_no_ghost_registry_metadata.py  test_no_src_test_support.py  test_no_star_imports.py  test_no_temp_docs_links.py  test_orchestration_registry_parity.py  test_public_api.py  test_readme_claims.py  test_repo_hygiene.py  test_ruff_security_rules.py  test_skill_analyze_tool_removed.py  test_skill_tool_boundary.py  test_ssrf_single_source.py  test_sub_agents_types_boundary.py  test_tool_catalog_product_id.py  test_tool_prompt_placement.py  test_tool_registry.py  test_toolkits_agent_boundary.py  (+9 more)
tests/backends/: _ARCH.md  test_local_secret_backend.py  test_profiles.py  test_skill_env.py  test_skill_system_core.py  test_skills.py  test_skills_security_hardening.py  test_snapshot.py  test_snapshot_performance.py  test_watcher.py
tests/blocking_io/: test_gate_smoke.py
tests/dev/: test_run_pytest_safe.py
tests/eval/: _ARCH.md  (+7 more)
(+3612 files in other folders)
